fix layout problem when rendering issue body

--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,7 @@
 .issue-detail p {
   padding: 5px;
   font-size: 16px;
+  overflow-wrap: break-word;
 }
 
 .issue-detail h4 {
